app/globals.css
@import "tailwindcss";

:root {
  --background: #F2F2F2;
  --foreground: #ffffff;
  --accent-silver: #F2F2F2;
  --text-color: #1A1A1A;
  --accent-text: #E73545;
  --footer-accent: #BBBBBB;
  --accent-logo: #38f801;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

body {
  background: var(--background);
  color: var(--foreground);
  scrollbar-gutter: stable;
}

body html {
  overflow-x: hidden;
}

html {
  overflow-y: scroll;
}

